@@ -2,7 +2,7 @@ name := "ReactivePlaygroundCaseStudies"
 
 version := "0.0.0"
 
-scalaVersion := "2.10.2"
+scalaVersion := "2.10.3"
 
 scalacOptions ++= List(
   "-deprecation",
@@ -11,6 +11,18 @@ scalacOptions ++= List(
   "-feature",
   "-target:jvm-1.6",
   "-Xlint"
+)
+
+javaOptions ++= Seq(
+  "-server",
+  "-verbose:gc",
+  "-Xms512M",
+  "-Xmx512M",
+  //"-XX:NewRatio=1",
+  //"-XX:CompileThreshold=100",
+  "-XX:+PrintCompilation",
+  "-XX:+PrintGCDetails",
+  "-XX:+UseParallelGC"
 )
 
 // resolvers ++= Seq()
@@ -23,3 +35,11 @@ libraryDependencies ++= Seq(
   "com.github.scala-incubator.io" %% "scala-io-core" % "0.4.2",
   "com.github.scala-incubator.io" %% "scala-io-file" % "0.4.2"
 )
+
+initialCommands in console := """
+import reactive._
+import reactive.signals._
+import reactive.events._
+import reactive.remote._
+import projections._
+"""
